languages/io-automaton-fe/src/test/resources/valid/resolver/ForLoadingFullVersionTest.ioautomaton
package valid.resolver;

import java.util.List;
import valid.resolver.Test;

automaton ForLoadingFullVersionTest{

	//Object
    input Integer i;
    
    //Complex
    input Test t;
    
    //Java List
    input List<Integer> l;
    
    output int o;
    
    state S;
    initial S;
}