languages/io-automaton-fe/src/test/resources/invalid/VariableMoreThanOnce.ioautomaton
package invalid;

automaton VariableMoreThanOnce{

    input int i;
    output int j;
    
    variable int a;
    variable int a;
    
    state S;
    initial S;
}